# microML

./: Makefile  README.md  main.hs  microML.cabal  microml  stack.yaml
rapport/: .gitignore  Makefile  meta.yaml  rapport.md
slides/: Makefile  meta.yaml  slides.md
src/: Eval.hs  EvalAFT.hs  EvalAST.hs  Parse.hs  StdLib.hs  Utils.hs
src/AFT/: Eval.hs  Expr.hs
src/ASM/: Eval.hs  Instr.hs
src/AST/: Eval.hs  Expr.hs  Parse.hs
src/Common/: ADT.hs  Context.hs  Expr.hs  Pattern.hs  StdLib.hs  Type.hs
src/DBT/: Eval.hs  Expr.hs  Infer.hs
src/DeBruijn/: Eval.hs  Expr.hs
src/IR/: AFT.hs  AST.hs  DeBruijn.hs
src/Parse/: ADT.hs  AST.hs  Expr.hs  Program.hs  Token.hs  Type.hs
src/Typed/: Expr.hs  Infer.hs  Type.hs  UnionFind.hs
src/Utils/: PrettyPrint.hs  ProxyStateEff.hs  Stackable.hs  UnionFind.hs
tests/: 01.ml  fact.ml  fib.ml  inference.ml  mergesort.ml  scoping.ml  test.ml  type_error.ml
