cabal-version:  >= 1.6
build-type:     Simple
name:           microML
version:        0.0.1
author:         Nadrieril

executable main
    main-is: main.hs
    hs-source-dirs: ., src
    other-modules:
          AST.Parse
          AST.Expr
          AFT.Expr
          AFT.Eval
          DeBruijn.Expr
          DeBruijn.Eval
          Typed.Type
          Typed.Expr
          Typed.UnionFind
          Typed.Infer
          StdLib
          Utils

    extensions:
        DeriveFunctor
        LambdaCase
        RecordWildCards
        ScopedTypeVariables
        ViewPatterns

    build-depends:
          base
        , parsec
        , containers
        , unordered-containers
        , mtl
        , directory
        , hashable
        , extensible-effects

    ghc-options: -Wall -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-unused-do-bind -O0
