cabal-version:  >= 1.6
build-type:     Simple
name:           microML
version:        0.0.1
author:         Nadrieril

executable main
    main-is: main.hs
    hs-source-dirs: ., src
    other-modules:
          Utils
          Utils.UnionFind
          Utils.ProxyStateEff
          Common.ADT
          Common.Expr
          Common.StdLib
          Common.Type
          AST.Parse
          AST.Expr
          AFT.Expr
          DBT.Expr
          DBT.Eval
          DBT.Infer
          ASM.Instr
          ASM.Eval

    extensions:
        DeriveFunctor
        LambdaCase
        RecordWildCards
        ScopedTypeVariables
        ViewPatterns

    build-depends:
          base
        , safe
        , parsec
        , containers
        , unordered-containers
        , mtl
        , directory
        , hashable
        , extensible-effects

    ghc-options: -Wall -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-unused-do-bind -O0
