cabal-version:  >= 1.6
build-type:     Simple
name:           microML
version:        0.0.1
author:         Nadrieril

executable microml
    main-is: main.hs
    hs-source-dirs: ., src
    other-modules:
          Utils
          Utils.ProxyStateEff
          Utils.UnionFind
          Utils.Stackable
          Common.ADT
          Common.Context
          Common.Expr
          Common.StdLib
          Common.Type
          AST.Parse
          AST.Expr
          AFT.Expr
          DBT.Expr
          DBT.Eval
          DBT.Infer
          ASM.Instr
          ASM.Eval

    extensions:
        DeriveFunctor
        DeriveTraversable
        LambdaCase
        RecordWildCards
        ScopedTypeVariables
        ViewPatterns
        DeriveGeneric
        PatternGuards

    build-depends:
          base
        , safe
        , parsec
        , containers
        , unordered-containers
        , mtl
        , directory
        , hashable
        , extensible-effects
        , options

    ghc-options: -Wall -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-unused-do-bind -O0
